# ai-technician

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: README.md  ci-backend.yml  ci-frontend.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  chat.py  conversations.py  vision.py
backend/app/auth/: README.md  dependencies.py  security.py
backend/app/db/: README.md  models.py  repository.py  session.py
backend/app/eval/: eval_set.py  run.py
backend/app/ingestion/: run.py
backend/app/rag/: README.md  chunking.py  ollama_client.py  pipeline.py  websearch.py
backend/tests/: test_auth.py  test_chat.py
docs/: architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.tsx  main.tsx
frontend/src/api/: admin.ts  chat.ts  client.ts  conversations.ts  vision.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AdminConsole.tsx  ChangePassword.tsx  Chat.tsx  Composer.tsx  ConversationSidebar.tsx  Login.tsx  MessageBubble.tsx  MessageList.tsx
frontend/src/hooks/: useSpeechRecognition.ts
frontend/src/styles/: index.css
infra/: README.md
ingestion/: README.md
ingestion/sample_docs/: README.md  generate_sample_manual.py
shared/: README.md
