[project]
name = "jensen-backend"
version = "0.1.0"
description = "Jensen AI Technical Support Assistant — FastAPI RAG orchestrator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",          # calls the Ollama HTTP API (embeddings + chat)
    "sqlalchemy>=2.0",      # ORM / DB layer (no raw SQL in routes)
    "psycopg[binary]>=3.2", # PostgreSQL driver
    "pgvector>=0.3",        # SQLAlchemy Vector type + operators
    "pypdf>=4.2",           # PDF text extraction for ingestion
    "pyjwt>=2.8",           # sign/verify local JWTs (simulates Cognito tokens)
    "bcrypt>=4.1",          # password hashing
    "python-multipart>=0.0.9",  # form login + file uploads
    "ddgs>=6.0",            # free web-search fallback (no API key)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's Depends()/HTTPBearer() in argument defaults is the idiomatic pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
